--- a/_config.yml
+++ b/_config.yml
@@ -83,12 +83,12 @@ author:
 publication_category:
  # books:
  #   title: 'Books'
-  manuscripts:
-    title: 'Journal Articles'    
-  conferences:
-    title: 'Conference Papers'
-  otherpubs:
-    title: 'Other publications'
+  mde4cpps: 
+    title: 'Model-driven engineering for industrial automation'
+  usability:
+    title: 'Usability of modeling tools'
+  iec61499:
+    title: 'Control software engineering with IEC 61499'    
 
 # Site Settings
 teaser                   :  # filename of teaser fallback teaser image placed in /images/ for social media previews
